tests/baselines/reference/assignmentCompatForEnums(strict=true).errors.txt
assignmentCompatForEnums.ts(6,36): error TS2322: Type 'null' is not assignable to type 'TokenType'.
assignmentCompatForEnums.ts(11,24): error TS7053: Element implicitly has an 'any' type because expression of type '"one"' can't be used to index type '{}'.
  Property 'one' does not exist on type '{}'.


==== assignmentCompatForEnums.ts (2 errors) ====
    enum TokenType { One, Two };
    
    var list = {};
    
    
    function returnType(): TokenType { return null; }
                                       ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'TokenType'.
    
    function foo() {
        var x = returnType();
    
        var x: TokenType = list['one'];
                           ~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"one"' can't be used to index type '{}'.
!!! error TS7053:   Property 'one' does not exist on type '{}'.
    }
    
    